Bug 686255 - Renaming Endian.h to avoid shadowing /usr/include/endian.h on Linux. r=bbondy