modules/libpr0n/encoders/ico/nsICOEncoder.cpp
@@ -36,7 +36,7 @@
  * ***** END LICENSE BLOCK ***** */
 
 #include "nsCRT.h"
-#include "Endian.h"
+#include "EndianMacros.h"
 #include "nsBMPEncoder.h"
 #include "nsPNGEncoder.h"
 #include "nsICOEncoder.h"
